@@ -154,8 +154,8 @@ class TestInfo(tests.TestCaseWithTransport):
                     ' rich-root or rich-root-pack'
             elif key in ('knit', 'metaweave'):
                 expected = 'knit or metaweave'
-            elif key in ('1.12-preview', '1.12-preview-rich-root'):
-                expected = '1.12-preview or 1.12-preview-rich-root'
+            elif key in ('development-wt5', 'development-wt5-rich-root'):
+                expected = 'development-wt5 or development-wt5-rich-root'
             self.assertCheckoutDescription(key, expected)
 
     def test_describe_branch_format(self):
@@ -165,10 +165,10 @@ class TestInfo(tests.TestCaseWithTransport):
             expected = None
             if key in ('dirstate', 'knit'):
                 expected = 'dirstate or knit'
-            elif key in ('1.9', '1.12-preview'):
-                expected = '1.12-preview or 1.9'
-            elif key in ('1.9-rich-root', '1.12-preview-rich-root'):
-                expected = '1.12-preview-rich-root or 1.9-rich-root'
+            elif key in ('1.9', 'development-wt5'):
+                expected = '1.9 or development-wt5'
+            elif key in ('1.9-rich-root', 'development-wt5-rich-root'):
+                expected = '1.9-rich-root or development-wt5-rich-root'
             self.assertBranchDescription(key, expected)
 
     def test_describe_repo_format(self):
@@ -178,10 +178,10 @@ class TestInfo(tests.TestCaseWithTransport):
             expected = None
             if key in ('dirstate', 'knit', 'dirstate-tags'):
                 expected = 'dirstate or dirstate-tags or knit'
-            elif key in ('1.9', '1.12-preview'):
-                expected = '1.12-preview or 1.9'
-            elif key in ('1.9-rich-root', '1.12-preview-rich-root'):
-                expected = '1.12-preview-rich-root or 1.9-rich-root'
+            elif key in ('1.9', 'development-wt5'):
+                expected = '1.9 or development-wt5'
+            elif key in ('1.9-rich-root', 'development-wt5-rich-root'):
+                expected = '1.9-rich-root or development-wt5-rich-root'
             self.assertRepoDescription(key, expected)
 
         format = bzrdir.format_registry.make_bzrdir('metaweave')
